--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@ body {
 		<div class="gooey-blob"></div>
 	</div>
         <h1>BIENVENIDO AL</h1>
-        <h1>MUNDO DIGITAL</h1><br>
+        <h1>NEGOCIO DIGITAL</h1><br>
         <button id="portalButton">INGRESAR</button>
 <br><br>
 <p style="font-size: 10px; color: white;">Powered with 💖 by Bebell Digital Solutions</p>
